--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@rainbow-me/rainbowkit": "^0.6.1",
     "@typechain/ethers-v5": "^10.1.0",
     "@types/mocha": "^10.0.0",
+    "@what3words/api": "^4.0.7",
+    "@what3words/react-components": "^4.0.6",
     "axios": "^0.27.2",
     "chai": "^4.3.6",
     "dotenv": "^16.0.3",
@@ -28,6 +30,7 @@
     "graphql": "^16.6.0",
     "hardhat": "^2.11.2",
     "ipfs-http-client": "^58.0.1",
+    "leaflet": "^1.9.2",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -40,6 +43,7 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.6",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@typechain/hardhat": "^6.1.3",
+    "@types/react": "18.0.21",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "hardhat-gas-reporter": "^1.0.9",
